charts/kyverno-policies/tests/deny-latest-image/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: deny-latest-image
policies:
  - ../policy.yaml
resources:
  - resources.yaml
results:
  - kind: Pod
    policy: deny-latest-image
    resources:
      - badpod
    result: fail
    rule: validate-image-tag
  - kind: Pod
    policy: deny-latest-image
    resources:
      - goodpod
    result: pass
    rule: require-image-tag
